--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,17 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+google-api-python-client = "^2.85.0"
+google-auth-httplib2 = "^0.1.0"
+google-auth-oauthlib = "^1.0.0"
+openai = "^0.27.4"
+pytest = "^7.3.0"
+python-dotenv = "^1.0.0"
+tiktoken = "^0.3.3"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core"]
