--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ tenacity = "^8.2.2"
 langchain = "^0.0.141"
 bs4 = "^0.0.1"
 lxml = "^4.9.2"
+structlog = "^23.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
