🐛 fix(labeler.py): fix typo in label prompt 🐛 fix(gmail.py): fix Email class import in main.py 🐛 fix(gmail.py): fix GmailProvider class initialization 🐛 fix(gmail.py): fix check_new_emails_since method name 🐛 fix(gmail.py): fix get_email_details method name 🐛 fix(gmail.py): fix tag_email_by_id method ✨ feat(gmail.py): add label mapping retrieval ✨ feat(gmail.py): add label tagging by email id ✨ feat(provider/utils.py): add Email dataclass and email parsing functions ✨ feat(pyproject.toml): add mypy dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ structlog = "^23.1.0"
 black = "^23.3.0"
 ruff = "^0.0.261"
 pytest = "^7.3.0"
+mypy = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core"]
